# virtiac

./: .nvimrc  LICENSE.md  README.md  main.py  pyproject.toml
commands/: check.py  cwd.py  halt.py  list.py  ssh.py  up.py
libs/: commands.py  connection.py  domains.py  files.py  forward.py  network.py  settings.py
src/: default.json  main.py  settings.json
src/commands/: check.py  destroy.py  halt.py  init.py  reload.py  ssh.py  up.py
src/libs/: commands.py  connection.py  disks.py  domains.py  files.py  forward.py  settings.py  templates.py
